--- a/taskfiles/Taskfile-lint.yml
+++ b/taskfiles/Taskfile-lint.yml
@@ -103,7 +103,7 @@ tasks:
     deps:
       - :common:node:dependencies:local
       - :install:npm:eslint
-    desc: 'Lint with `eslint`'
+    desc: Lint with `eslint`
     summary: |
       # Lint with `eslint`
 
@@ -186,7 +186,7 @@ tasks:
   packer:
     deps:
       - :install:software:packer
-    desc: 'Validate the Packer templates ending with `template.json`'
+    desc: Validate the Packer templates ending with `template.json`
     summary: |
       # Validate Packer templates
 
