--- a/taskfiles/Taskfile-lint.yml
+++ b/taskfiles/Taskfile-lint.yml
@@ -20,7 +20,7 @@ tasks:
 
   ansible:
     deps:
-      - :ansible:symlink:{{.REPOSITORY_SUBTYPE}}
+      - :symlink:{{.REPOSITORY_SUBTYPE}}
       - :common:python:requirements
     desc: Lint Ansible projects using Ansible Lint
     summary: |
