--- a/taskfiles/Taskfile-python.yml
+++ b/taskfiles/Taskfile-python.yml
@@ -4,3 +4,10 @@ version: '3'
 tasks:
   default:
     summary: Coming soon..
+
+  global:uninstall:
+    cmds:
+      - cmd: if type pip &> /dev/null; then pip uninstall -y -r <(pip freeze); fi
+        ignore_error: true
+      - cmd: if type pip3 &> /dev/null; then pip3 uninstall -y -r <(pip3 freeze); fi
+        ignore_error: true
