--- a/taskfiles/ansible/Taskfile-test.yml
+++ b/taskfiles/ansible/Taskfile-test.yml
@@ -148,7 +148,7 @@ tasks:
     log:
       error: 'Test finished with error(s). See the log at `molecule/.results/{{.MOLECULE_DATE}}-default.txt`.'
       start: 'Storing full E2E test results to `molecule/.results/{{.MOLECULE_DATE}}-default.txt`. This can take awhile..'
-      success: 'Successfully completed the `molecule test`. Results are stored in `molecule/.results/{{.MOLECULE_DATE}}-default.txt`.
+      success: 'Successfully completed the `molecule test`. Results are stored in `molecule/.results/{{.MOLECULE_DATE}}-default.txt`.'
 
   vagrant:
     deps:
