Update taskfiles/npm/Taskfile.yml, taskfiles/npm/Taskfile-build.yml, taskfiles/npm/Taskfile-cov.yml, Taskfile.yml.handlebars, taskfiles/npm/Taskfile-test.yml, .eslintrc.cjs, taskfiles/Taskfile-lint.yml, taskfiles/Taskfile-fix.yml, taskfiles/Taskfile-install.yml, package.json.handlebars, .vscode/settings.json Deleted taskfiles/Taskfile-npm.yml

--- a/taskfiles/Taskfile-install.yml
+++ b/taskfiles/Taskfile-install.yml
@@ -65,7 +65,6 @@ tasks:
           @typescript-eslint/parser
           eslint
           eslint-plugin-import
-          eslint-plugin-jsdoc
           eslint-plugin-prefer-arrow
           eslint-plugin-promise
           eslint-plugin-regexp
@@ -77,7 +76,15 @@ tasks:
           eslint-plugin-typescript-sort-keys
           eslint-plugin-unicorn
           eslint-plugin-unused-imports
+          esprint
           typescript
+
+  npm:esprint:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: esprint
 
   npm:global:
     deps:
