--- a/taskfiles/npm/Taskfile.yml
+++ b/taskfiles/npm/Taskfile.yml
@@ -24,5 +24,15 @@ tasks:
   test:unit:
     deps:
       - :common:node:dependencies:local
+      - :install:npm:nyc
+    desc: Run the unit tests for an NPM project
     cmds:
-      - npm run test:unit
+      - nyc --silent ava
+
+  test:watch:
+    deps:
+      - :common:node:dependencies:local
+      - :install:npm:nyc
+    desc: Run the unit tests for an NPM project in watch mode
+    cmds:
+      - nyc --silent ava --watch
