--- a/taskfiles/Taskfile-install.yml
+++ b/taskfiles/Taskfile-install.yml
@@ -22,6 +22,13 @@ tasks:
     sources:
       - package.json
 
+  npm:codecov:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: codecov
+
   npm:commitizen:
     run: once
     cmds:
@@ -138,6 +145,20 @@ tasks:
         vars:
           NPM_PACKAGE: npm
 
+  npm:nyc:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: nyc
+
+  npm:open-cli:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: open-cli
+
   npm:pnpm:
     run: once
     cmds:
@@ -214,6 +235,13 @@ tasks:
         vars:
           NPM_PACKAGE: tinypng-cli
           NPM_PACKAGE_BIN: tinypng
+
+  npm:typedoc:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: typedoc
 
   python:virtualenv:
     deps:
