--- a/taskfiles/common/Taskfile.yml
+++ b/taskfiles/common/Taskfile.yml
@@ -14,7 +14,7 @@ tasks:
       which will re-generate the project from scratch. Ideally, this task and the reset task
       should never be necessary. The `common:update` task should be used instead.
     vars:
-      CLEAN_TARGETS: .autodoc .task .venv node_modules
+      CLEAN_TARGETS: .autodoc .task .venv build node_modules test
       RANDOM_STRING:
         sh: openssl rand -hex 14
     cmds:
@@ -152,7 +152,7 @@ tasks:
     cmds:
       - |
         if [ "${container:=}" != "docker" ]; then
-          npm install
+          npm install --force
           npm audit fix --force || true
         fi
     sources:
@@ -179,7 +179,7 @@ tasks:
 
       1. Ensures the project is up-to-date with the latest upstream changes
       2. Lints the project with all available linters
-      3. Updates the version of the project in the `package.json` file
+      3. Updates the version of the project in the `package.json` file and other relevant files
       4. Add the appropriate details to the CHANGELOG.md file
     cmds:
       - task: update
@@ -275,7 +275,7 @@ tasks:
   reset-force:
     deps:
       - software:git
-    desc: 'Aggressively reset the project (WARNING: This will wipe uncommitted work)'
+    desc: 'Aggressively reset the project (**WARNING** This will wipe uncommitted work)'
     summary: |
       # Aggressively reset the project
 
@@ -331,3 +331,7 @@ tasks:
     preconditions:
       - sh: 'type docker &> /dev/null'
         msg: Docker is not installed.
+
+  update:
+    deps:
+      - :common:update:update
