Update taskfiles/npm/Taskfile-build.yml, taskfiles/npm/Taskfile.yml, taskfiles/Taskfile-install.yml

--- a/taskfiles/Taskfile-install.yml
+++ b/taskfiles/Taskfile-install.yml
@@ -22,6 +22,13 @@ tasks:
     sources:
       - package.json
 
+  npm:ava:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: ava
+
   npm:codecov:
     run: once
     cmds:
