--- a/taskfiles/Taskfile-install.yml
+++ b/taskfiles/Taskfile-install.yml
@@ -217,6 +217,13 @@ tasks:
           NPM_PACKAGE: tinypng-cli
           NPM_PACKAGE_BIN: tinypng
 
+  npm:ts-node:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: ts-node
+
   npm:typedoc:
     run: once
     cmds:
