--- a/taskfiles/Taskfile-install.yml
+++ b/taskfiles/Taskfile-install.yml
@@ -119,6 +119,20 @@ tasks:
         vars:
           NPM_PACKAGE: markdown-link-check
 
+  npm:ndb:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: ndb
+
+  npm:nodemon:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: nodemon
+
   npm:npm:
     run: once
     cmds:
