--- a/taskfiles/common/Taskfile.yml
+++ b/taskfiles/common/Taskfile.yml
@@ -14,7 +14,7 @@ tasks:
       which will re-generate the project from scratch. Ideally, this task and the reset task
       should never be necessary. The `common:update` task should be used instead.
     vars:
-      CLEAN_TARGETS: .autodoc .task .venv coverage dist node_modules
+      CLEAN_TARGETS: .autodoc .task .venv node_modules
       RANDOM_STRING:
         sh: openssl rand -hex 14
     cmds:
