Update taskfiles/Taskfile-install.yml, taskfiles/npm/Taskfile.yml, esbuild.minified.js, esbuild.bundled.js, taskfiles/common/Taskfile-update.yml

--- a/taskfiles/Taskfile-install.yml
+++ b/taskfiles/Taskfile-install.yml
@@ -67,6 +67,13 @@ tasks:
         vars:
           NPM_PACKAGE: cspell
 
+  npm:esbuild:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: esbuild
+
   npm:eslint:
     run: once
     cmds:
@@ -175,6 +182,13 @@ tasks:
       - task: npm:global
         vars:
           NPM_PACKAGE: open-cli
+
+  npm:pkg:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: pkg
 
   npm:pnpm:
     run: once
